--- a/term1/src/App.css
+++ b/term1/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.mb-3 {
+  padding-top: 100px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +39,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+#header{
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/8/8f/Max_Verstappen_2022.jpg");
+  height: 600px;
+  background-size: 100%;
+}
+
+#secondary{
+  height: 400px;
 }
